--- a/CarsApp/CarsApp.Services/CarsApp.Services.csproj
+++ b/CarsApp/CarsApp.Services/CarsApp.Services.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CarsApp.Common\CarsApp.Common.csproj" />
     <ProjectReference Include="..\CarsApp.Data\CarsApp.Data.csproj" />
   </ItemGroup>
 
