--- a/CarsApp/CarsApp.Services/CarsApp.Services.csproj
+++ b/CarsApp/CarsApp.Services/CarsApp.Services.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\CarsApp.Common\CarsApp.Common.csproj" />
     <ProjectReference Include="..\CarsApp.Data\CarsApp.Data.csproj" />
+    <ProjectReference Include="..\CarsApp.Models\CarsApp.Models.csproj" />
   </ItemGroup>
 
 </Project>
