--- a/CarsApp/CarsApp.Common/CarsApp.Common.csproj
+++ b/CarsApp/CarsApp.Common/CarsApp.Common.csproj
@@ -5,4 +5,7 @@
 	<InvariantGlobalization>true</InvariantGlobalization> 
   </PropertyGroup>
 
+	<ItemGroup>
+		<RuntimeHostConfigurationOption Include="System.Globalization.Invariant" Value="true" />
+	</ItemGroup>
 </Project>
