globalization invariant fix

--- a/CarsApp/CarsApp.Common/CarsApp.Common.csproj
+++ b/CarsApp/CarsApp.Common/CarsApp.Common.csproj
@@ -7,5 +7,6 @@
 
 	<ItemGroup>
 		<RuntimeHostConfigurationOption Include="System.Globalization.UseNls" Value="true" />
+		<RuntimeHostConfigurationOption Include="System.Globalization.Invariant" Value="true" />
 	</ItemGroup>
 </Project>
