--- a/CarsApp/CarsApp.API/appsettings.json
+++ b/CarsApp/CarsApp.API/appsettings.json
@@ -3,7 +3,7 @@
     "Secret": "MY SECRET FOR JWT AUTHENTICATION"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Database=CarsDB;User Id=sa;Password=eva27;"
+    "DefaultConnection": "Server=sqlserver;Database=CarsDB;User Id=sa; Password=mysqldataStrongPassword@!#();MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
