Fix errors from docker

--- a/CarsApp/CarsApp.API/CarsApp.API.csproj
+++ b/CarsApp/CarsApp.API/CarsApp.API.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>aspnet-CarsApp.API-9A029993-CB37-4FFC-8407-1293C56F7D67</UserSecretsId>
-	<InvariantGlobalization>true</InvariantGlobalization>
+	<InvariantGlobalization>false</InvariantGlobalization>
 	<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
