--- a/CarsApp/CarsApp.Common/CarsApp.Common.csproj
+++ b/CarsApp/CarsApp.Common/CarsApp.Common.csproj
@@ -2,6 +2,6 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-	<InvariantGlobalization>true</InvariantGlobalization> 
+	<InvariantGlobalization>false</InvariantGlobalization> 
   </PropertyGroup>
 </Project>
