Add docker compose push images step

--- a/.github/workflows/docker-compose-build-and-push.yml
+++ b/.github/workflows/docker-compose-build-and-push.yml
@@ -21,3 +21,6 @@ jobs:
 
       - name: Docker Compose Build
         run: docker-compose build
+
+      - name: Docker Compose Push Images
+        run: docker-compose push
