--- a/.github/workflows/docker-compose-build-and-push.yml
+++ b/.github/workflows/docker-compose-build-and-push.yml
@@ -24,3 +24,13 @@ jobs:
 
       - name: Docker Compose Push Images
         run: docker-compose push
+
+      - name: Set up kubectl
+        uses: matootie/dokube@v1.3.4
+        with:
+          personalAccessToken: ${{ secrets.DIGITALOCEAN_TOKEN }}
+          clusterName: k8s-1-21-5-do-0-ams3-1639430246267
+          version: "1.21.5"
+
+      - name: Get nodes
+        run: kubectl get nodes
