--- a/.github/workflows/docker-compose-build-and-push.yml
+++ b/.github/workflows/docker-compose-build-and-push.yml
@@ -32,9 +32,12 @@ jobs:
           clusterName: k8s-1-21-5-do-0-ams3-1639430246267
           version: "1.21.5"
 
-      - name: Get nodes
+      - name: Save DigitalOcean
+        run: doctl kubernetes cluster kubeconfig save 5a93006e-c2c2-40a2-a975-a67db38d5dc8
+
+      - name: Deploy to Kubernetes
         run: |
-            kubectl apply -f /.k8s/.environment/development.yml
-            kubectl apply -f /.k8s/database/carsapi-database.yml
-            kubectl apply -f /.k8s/web-services/carsapi-service.yml
-            kubectl apply -f /.k8s/ingress/ingress-controller.yml
+            kubectl apply -f ./.k8s/.environment/development.yml
+            kubectl apply -f ./.k8s/database/carsapi-database.yml
+            kubectl apply -f ./.k8s/web-services/carsapi-service.yml
+            kubectl apply -f ./.k8s/ingress/ingress-controller.yml
