Fix ingress controller

--- a/.k8s/ingress/ingress-controller.yml
+++ b/.k8s/ingress/ingress-controller.yml
@@ -11,5 +11,7 @@ spec:
         paths:
           - path: /
             backend:
-              serviceName: carsapi-service
-              servicePort: 5001
+              service:
+                name: carsapi-service
+                port:
+                  number: 5001
