--- a/CarsApp/CarsApp.API/appsettings.json
+++ b/CarsApp/CarsApp.API/appsettings.json
@@ -3,7 +3,7 @@
     "Secret": "MY SECRET FOR JWT AUTHENTICATION"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sqlserver;Database=CarsDB;User Id=sa; Password=mysqldataStrongPassword@!#();MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:carsapi.database.windows.net,1433;Initial Catalog=CarsDB;Persist Security Info=False;User ID=carsapi;Password=strongPassword#$%@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
