--- a/.k8s/web-services/carsapi-service.yml
+++ b/.k8s/web-services/carsapi-service.yml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: cars-api-service-data
+  name: carsapi-service-pvc
 spec:
   accessModes:
   - ReadWriteOnce
-  - ReadOnlyMany 
+  - ReadOnlyMany
   resources:
     requests:
-      storage: 1Gi
+      storage: 10Mi
 
 ---
 
@@ -18,49 +18,42 @@ metadata:
   name: carsapi-service
 spec:
   type: LoadBalancer
-  ports:
-  - port: 5001
-    targetPort: 80
   selector:
-    web-service: carsapi
+    app: carsapi-pod
+  ports:
+  - port: 5000
+    targetPort: 80
 
 ---
 
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: carsapi-service
+  name: carsapi-deployment
 spec:
+  replicas: 1
   selector:
     matchLabels:
-      web-service: carsapi
+      app: carsapi-pod
   template:
     metadata:
       labels:
-        web-service: carsapi
-        system: server
+        app: carsapi-pod
     spec:
-      affinity:
-        podAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-          - labelSelector:
-              matchLabels:
-                web-service: carsapi
-            topologyKey: "kubernetes.io/hostname"
       containers:
-      - name: carsapi-service
+      - name: carsapi-container
         image: dockec2021/cars-api:latest
         imagePullPolicy: Always
-        ports:
-        - containerPort: 80
         resources:
           limits:
             memory: "512Mi"
             cpu: "250m"
+        ports:
+        - containerPort: 80
         volumeMounts:
-        - name: cars-api-service-data
+        - name: carsapi-service-pvc
           mountPath: /root/.aspnet/DataProtection-Keys
       volumes:
-      - name: cars-api-service-data
+      - name: carsapi-service-pvc
         persistentVolumeClaim:
-          claimName: cars-api-service-data
+          claimName: carsapi-service-pvc    
