--- a/.k8s/web-services/carsapi-service.yml
+++ b/.k8s/web-services/carsapi-service.yml
@@ -50,3 +50,10 @@ spec:
             cpu: "250m"
         ports:
         - containerPort: 80
+        volumeMounts:
+        - name: carsapi-service-pvc
+          mountPath: /root/.aspnet/DataProtection-Keys
+      volumes:
+      - name: carsapi-service-pvc
+        persistentVolumeClaim:
+          claimName: carsapi-service-pvc      
