--- a/.k8s/ingress/ingress-controller.yml
+++ b/.k8s/ingress/ingress-controller.yml
@@ -1,14 +1,17 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: name
+  name: cars-api-ingress
   annotations:
-    kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - host: mytestcarsapi.com
-      http:
+    - http:
         paths:
-          - backend:
-            serviceName: carsapi-service
-            servicePort: 5000
+          -path: /
+           pathType: Prefix
+           backend:
+            service:
+              name: carsapi-service
+              port:
+                number: 5000
