--- a/.k8s/ingress/ingress-controller.yml
+++ b/.k8s/ingress/ingress-controller.yml
@@ -1,17 +1,17 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: cars-api-ingress
+  name: cars-api-ingress-controller
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - http:
-        paths:
-          -path: /
-           pathType: Prefix
-           backend:
-            service:
-              name: carsapi-service
-              port:
-                number: 5000
+  - http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: carsapi-service
+            port:
+              number: 5000
