--- a/.github/workflows/docker-compose-build-and-push.yml
+++ b/.github/workflows/docker-compose-build-and-push.yml
@@ -35,5 +35,6 @@ jobs:
 
       - name: Deploy to Kubernetes
         run: |
+          kubectl delete deploy carsapi-deployment
           kubectl apply -f ./.k8s/web-services/carsapi-service.yml
           kubectl apply -f ./.k8s/ingress/ingress-controller.yml
