--- a/.k8s/web-services/carsapi-service.yml
+++ b/.k8s/web-services/carsapi-service.yml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: carsapi-service
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: carsapi-pod
   ports:
